Ye finished 50% of admin page, We are learning how to use poo in js too and my work is really clean

--- a/admin-page.html
+++ b/admin-page.html
@@ -12,9 +12,11 @@
         ></script>
     </head>
     <body>
+
         <div class="main">
+            <h1 class="title">Admin Page</h1>
             <div class="inputs-container">
-                <label>
+                <label class="input-container">
                     <label for="username" class="inputs-titles">
                         Username:
                     </label>
@@ -22,11 +24,10 @@
                         type="text"
                         class="inputs"
                         id="username"
-                        placeholder="Write Your Username"
                     />
                 </label>
 
-                <label>
+                <label class="input-container">
                     <label for="password" class="inputs-titles">
                         Password:
                     </label>
@@ -34,7 +35,6 @@
                         type="text"
                         class="inputs"
                         id="password"
-                        placeholder="Write Your Password"
                     />
                 </label>
 
@@ -48,6 +48,39 @@
             </div>
             <div class="result"></div>
         </div>
+        <script src="scripts/admin/html.js"></script>
         <script src="scripts/admin/script.js"></script>
     </body>
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
