We optimise our project a little bit and we start in teacher page that really cool, yes ?

--- a/teacher-page.html
+++ b/teacher-page.html
@@ -43,43 +43,12 @@
             <div class="areNew">
                 <p>
                     If you are new you can
-                    <a class="youWannaCreateAcount">Create New Acount</a>
+                       <a class="youWannaCreateAcount">Create New Acount</a>
                 </p>
             </div>
             <div class="result"></div>
         </div>
-        <script src="scripts/admin/script.js" type="module"></script>
+
+        <script src="scripts/teacher/script.js" type="module"></script>
     </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
