--- a/teacher-page.html
+++ b/teacher-page.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <title>Admin Page</title>
+        <title>Teacher Page</title>
         <link rel="stylesheet" href="styles/admin/style.css" />
         <script
             src="https://code.jquery.com/jquery-3.7.1.min.js"
@@ -14,7 +14,7 @@
     <body>
 
         <div class="main">
-            <h1 class="title">Admin Page</h1>
+            <h1 class="title">Teacher Page</h1>
             <div class="inputs-container">
                 <label class="input-container">
                     <label for="username" class="inputs-titles">
