We fix the enoying bug of createAcount and now we have to display a message if the inputs is Null

--- a/admin-page.html
+++ b/admin-page.html
@@ -43,7 +43,7 @@
             <div class="areNew">
                 <p>
                     If you are new you can
-                    <a class="youWannaCreateAcount">Create New Acount</a>
+                    <a class="youWannaCreateAccount">Create New Acount</a>
                 </p>
             </div>
             <div class="result"></div>
